# qsga

./: .gitignore  1__qsga_whitepaper_1__efficient_quantum_graph_laplacians_generation.html  1__qsga_whitepaper_1__efficient_quantum_graph_laplacians_generation.ipynb  2__qsga_whitepaper_2.html  2__qsga_whitepaper_2.ipynb  2__qsga_whitepaper_2__initial_experimentation_and_results.ipynb  3__qsga_whitepaper_3.html  3__qsga_whitepaper_3.ipynb  3__qsga_whitepaper_3__spectral_triviality_of_ixn_laplacians.ipynb  3__qsga_whitepaper_3__spectral_triviality_of_skeleton_laplacians.ipynb  4__qsga_whitepaper_4__laplacian_hamiltonians_perturbation_method.ipynb  5__qsga_whitepaper_5__rop_laplacians_non_triviality.ipynb  6__qsga_whitepaper_6__applications_and_rop_laplacians_hamiltonian_simulation.ipynb  README.md  data_handling.py  data_verifiers.py  experiments.py  graphics.py  hamiltonian_generators.py  pyproject.toml  scratchpad_1.ipynb  tests.py  util.py
experiments_data_archive/: README.md
qsga/: data_handling.py  data_verifiers.py  experiments.py  util.py
research_whitepapers/: 1__qsga_whitepaper_1__efficient_quantum_graph_laplacians_generation.ipynb  3__qsga_whitepaper_3__spectral_triviality_of_skeleton_laplacians.html  3__qsga_whitepaper_3__spectral_triviality_of_skeleton_laplacians.ipynb  4__qsga_whitepaper_4__laplacian_hamiltonians_perturbation_method.html
whitepapers_html/: 1__qsga_whitepaper_1__efficient_quantum_graph_laplacians_generation.html  2__qsga_whitepaper_2__initial_experimentation_and_results.html  3__qsga_whitepaper_3__spectral_triviality_of_ixn_laplacians.html  (+3 more)
(+349 files in other folders)
