[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsga"
version = "0.1.0"
description = "Quantum Spectral Graph Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "networkx==3.5",
    "qiskit==2.1.1",
    "scipy==1.16.2",
    "ipython==8.11.0",
    "traitlets==5.9.0",
    "notebook==6.4.8",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "sympy==1.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qsga*"]
